fix(js): JS dist files paths

--- a/components/accordion.html
+++ b/components/accordion.html
@@ -46,7 +46,7 @@ npm-version: 2.0.1
 {% endcapture %}
 
 {% capture accordion_js %}
-<script type="text/javascript" src="/node_modules/bulma-extensions/bulma-accordion/dist/js/bulma-accordion.min.js"></script>
+<script type="text/javascript" src="/node_modules/bulma-accordion/dist/js/bulma-accordion.min.js"></script>
 {% endcapture %}
 
 
@@ -110,7 +110,8 @@ npm-version: 2.0.1
   </div>
 </section>
 
-<script type="text/javascript" src="{{ site.url }}/node_modules/bulma-extensions/bulma-accordion/dist/js/bulma-accordion.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bulma-accordion@2.0.1/dist/js/bulma-accordion.min.js">
+</script>
 <script>
   bulmaAccordion.attach();
 </script>
