--- a/components/steps.html
+++ b/components/steps.html
@@ -434,7 +434,8 @@ jsOptions:
 
     <p>Thanks to <a href="https://github.com/aramvisser/bulma-steps" tagret="_blank">aramvisser</a> for the <code>marker</code> name idea and for the sizes mixin declaration (which is smart).</p>
 
-    <script type="text/javascript" src="{{ site.url }}/node_modules/bulma-extensions/bulma-steps/dist/js/bulma-steps.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bulma-steps@2.2.1/dist/js/bulma-steps.min.js">
+    </script>
     <script>
       bulmaSteps.attach();
     </script>
