--- a/components/timeline/index.html
+++ b/components/timeline/index.html
@@ -324,7 +324,7 @@
   </div>
   <div class="timeline-item">
     <div class="timeline-marker is-image is-32x32">
-      <img src="http://bulma.io/images/placeholders/32x32.png">
+      <img src="https://bulma.io/images/placeholders/32x32.png">
     </div>
     <div class="timeline-content">
       <p class="heading">February 2016</p>
@@ -363,7 +363,7 @@
   <span class="nt">&lt;/div&gt;</span>
   <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"timeline-item"</span><span class="nt">&gt;</span>
     <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"timeline-marker is-image is-32x32"</span><span class="nt">&gt;</span>
-      <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"http://bulma.io/images/placeholders/32x32.png"</span><span class="nt">&gt;</span>
+      <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"https://bulma.io/images/placeholders/32x32.png"</span><span class="nt">&gt;</span>
     <span class="nt">&lt;/div&gt;</span>
     <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"timeline-content"</span><span class="nt">&gt;</span>
       <span class="nt">&lt;p</span> <span class="na">class=</span><span class="s">"heading"</span><span class="nt">&gt;</span>February 2016<span class="nt">&lt;/p&gt;</span>
@@ -424,7 +424,7 @@
   </div>
   <div class="timeline-item">
     <div class="timeline-marker is-warning is-image is-32x32">
-      <img src="http://bulma.io/images/placeholders/32x32.png">
+      <img src="https://bulma.io/images/placeholders/32x32.png">
     </div>
     <div class="timeline-content">
       <p class="heading">February 2016</p>
@@ -463,7 +463,7 @@
   <span class="nt">&lt;/div&gt;</span>
   <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"timeline-item"</span><span class="nt">&gt;</span>
     <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"timeline-marker is-warning is-image is-32x32"</span><span class="nt">&gt;</span>
-      <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"http://bulma.io/images/placeholders/32x32.png"</span><span class="nt">&gt;</span>
+      <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"https://bulma.io/images/placeholders/32x32.png"</span><span class="nt">&gt;</span>
     <span class="nt">&lt;/div&gt;</span>
     <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"timeline-content"</span><span class="nt">&gt;</span>
       <span class="nt">&lt;p</span> <span class="na">class=</span><span class="s">"heading"</span><span class="nt">&gt;</span>February 2016<span class="nt">&lt;/p&gt;</span>
@@ -517,7 +517,7 @@
   </div>
   <div class="timeline-item is-warning">
     <div class="timeline-marker is-image is-32x32">
-      <img src="http://bulma.io/images/placeholders/32x32.png">
+      <img src="https://bulma.io/images/placeholders/32x32.png">
     </div>
     <div class="timeline-content">
       <p class="heading">February 2016</p>
@@ -556,7 +556,7 @@
   <span class="nt">&lt;/div&gt;</span>
   <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"timeline-item is-warning"</span><span class="nt">&gt;</span>
     <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"timeline-marker is-image is-32x32"</span><span class="nt">&gt;</span>
-      <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"http://bulma.io/images/placeholders/32x32.png"</span><span class="nt">&gt;</span>
+      <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"https://bulma.io/images/placeholders/32x32.png"</span><span class="nt">&gt;</span>
     <span class="nt">&lt;/div&gt;</span>
     <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"timeline-content"</span><span class="nt">&gt;</span>
       <span class="nt">&lt;p</span> <span class="na">class=</span><span class="s">"heading"</span><span class="nt">&gt;</span>February 2016<span class="nt">&lt;/p&gt;</span>
@@ -609,7 +609,7 @@
   </div>
   <div class="timeline-item is-warning">
     <div class="timeline-marker is-warning is-image is-32x32">
-      <img src="http://bulma.io/images/placeholders/32x32.png">
+      <img src="https://bulma.io/images/placeholders/32x32.png">
     </div>
     <div class="timeline-content">
       <p class="heading">February 2016</p>
@@ -648,7 +648,7 @@
   <span class="nt">&lt;/div&gt;</span>
   <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"timeline-item is-warning"</span><span class="nt">&gt;</span>
     <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"timeline-marker is-warning is-image is-32x32"</span><span class="nt">&gt;</span>
-      <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"http://bulma.io/images/placeholders/32x32.png"</span><span class="nt">&gt;</span>
+      <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"https://bulma.io/images/placeholders/32x32.png"</span><span class="nt">&gt;</span>
     <span class="nt">&lt;/div&gt;</span>
     <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"timeline-content"</span><span class="nt">&gt;</span>
       <span class="nt">&lt;p</span> <span class="na">class=</span><span class="s">"heading"</span><span class="nt">&gt;</span>February 2016<span class="nt">&lt;/p&gt;</span>
@@ -711,7 +711,7 @@
   </div>
   <div class="timeline-item is-warning">
     <div class="timeline-marker is-warning is-image is-32x32">
-      <img src="http://bulma.io/images/placeholders/32x32.png">
+      <img src="https://bulma.io/images/placeholders/32x32.png">
     </div>
     <div class="timeline-content">
       <p class="heading">February 2016</p>
@@ -750,7 +750,7 @@
   <span class="nt">&lt;/div&gt;</span>
   <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"timeline-item is-warning"</span><span class="nt">&gt;</span>
     <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"timeline-marker is-warning is-image is-32x32"</span><span class="nt">&gt;</span>
-      <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"http://bulma.io/images/placeholders/32x32.png"</span><span class="nt">&gt;</span>
+      <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"https://bulma.io/images/placeholders/32x32.png"</span><span class="nt">&gt;</span>
     <span class="nt">&lt;/div&gt;</span>
     <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"timeline-content"</span><span class="nt">&gt;</span>
       <span class="nt">&lt;p</span> <span class="na">class=</span><span class="s">"heading"</span><span class="nt">&gt;</span>February 2016<span class="nt">&lt;/p&gt;</span>
@@ -803,7 +803,7 @@
   </div>
   <div class="timeline-item is-warning">
     <div class="timeline-marker is-warning is-image is-32x32">
-      <img src="http://bulma.io/images/placeholders/32x32.png">
+      <img src="https://bulma.io/images/placeholders/32x32.png">
     </div>
     <div class="timeline-content">
       <p class="heading">February 2016</p>
@@ -842,7 +842,7 @@
   <span class="nt">&lt;/div&gt;</span>
   <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"timeline-item is-warning"</span><span class="nt">&gt;</span>
     <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"timeline-marker is-warning is-image is-32x32"</span><span class="nt">&gt;</span>
-      <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"http://bulma.io/images/placeholders/32x32.png"</span><span class="nt">&gt;</span>
+      <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"https://bulma.io/images/placeholders/32x32.png"</span><span class="nt">&gt;</span>
     <span class="nt">&lt;/div&gt;</span>
     <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"timeline-content"</span><span class="nt">&gt;</span>
       <span class="nt">&lt;p</span> <span class="na">class=</span><span class="s">"heading"</span><span class="nt">&gt;</span>February 2016<span class="nt">&lt;/p&gt;</span>
