--- a/components/accordion/index.html
+++ b/components/accordion/index.html
@@ -215,6 +215,14 @@
 
 <section class="section">
   <div class="container">
+    
+    <article class="message is-warning">
+      <div class="message-body">
+        New version with a lot of new functionalities and its documentation is now available on its new repository <a href="https://github.com/CreativeBulma/bulma-collapsible/"
+          target="_blank">CreativeBulma - BulmaCollapsible</a>.
+      </div>
+    </article>
+    
     <div class="columns">
       <div class="column">
         <h1 class="title">Accordion</h1>
