--- a/layout/divider/index.html
+++ b/layout/divider/index.html
@@ -196,6 +196,13 @@
 
 <section class="section">
   <div class="container">
+    <article class="message is-warning">
+      <div class="message-body">
+        New version with a lot of new functionalities and its documentation is now available on its new repository <a href="https://github.com/CreativeBulma/bulma-divider/"
+          target="_blank">CreativeBulma - BulmaDivider</a>.
+      </div>
+    </article>
+    
     <div class="columns">
       <div class="column">
         <h1 class="title">Divider</h1>
