--- a/components/accordion/index.html
+++ b/components/accordion/index.html
@@ -216,7 +216,7 @@
 <section class="section">
   <div class="container">
     
-    <article class="message is-warning">
+    <article class="message is-danger">
       <div class="message-body">
         New version with a lot of new functionalities and its documentation is now available on its new repository <a href="https://github.com/CreativeBulma/bulma-collapsible/"
           target="_blank">CreativeBulma - BulmaCollapsible</a>.
