--- a/components/calendar/index.html
+++ b/components/calendar/index.html
@@ -240,8 +240,8 @@
     </div>
     <article class="message is-warning">
       <div class="message-body">
-        Full documentation and demos of this component are now available on <a href="https://creativebulma.net/product/calendar/demo"
-          target="_blank">CreativeBulma</a>.
+        Full documentation and demos of this component are now available <a href="https://bulma-calendar.onrender.com/"
+          target="_blank">here</a>.
       </div>
     </article>
   </div>
