--- a/components/carousel/index.html
+++ b/components/carousel/index.html
@@ -241,9 +241,9 @@
     
     <article class="message is-warning">
       <div class="message-body">
-        Full documentation and demos of this component are now available on <a
-          href="https://creativebulma.net/product/carousel/demo"
-          target="_blank">CreativeBulma</a>.
+        Full documentation and demos of this component are now available <a
+          href="https://bulma-carousel.onrender.com/"
+          target="_blank">here</a>.
       </div>
     </article>
 
